# python-mcp-server-template

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  initialize.sh  main.py  pyproject.toml
.claude/commands/: new-project.md
docs/: typing-best-practices.md
src/mcp_server_template/: __init__.py  models.py  server.py
tests/: __init__.py  test_server.py
